# partisan_judges

./: Makefile  README.md  main.py  myout.csv  pyproject.toml  test.txt
docs/: mkdocs.yml
docs/docs/: index.md
partisan_judges/: __init__.py  dataset.py  features.py  plots.py  sbert-test.py
partisan_judges/modeling/: predict.py  train.py
