[project]
name = "partisan-judges"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bootstrapped>=0.0.2",
    "loguru>=0.7.3",
    "pandarallel>=1.6.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "sentence-transformers>=5.2.0",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
    "wordfreq>=3.1.1",
]

[dependency-groups]
dev = [
    "partisan-judges",
]

[tool.uv.sources]
partisan-judges = { workspace = true }
